Translate cam.003 to GET /parties request
